k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shared-services
---
apiVersion: v1
kind: Namespace
metadata:
  name: dev
