k8s/nexus-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: nexus
  name: nexus-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nexus
  strategy: {}
  template:
    metadata:
      labels:
        app: nexus
    spec:
      containers:
      - image: gcr.io/seraphic-lock-358517/nexus3:3.39.0
        name: nexus
        ports:
        - containerPort: 8081
        volumeMounts:
          - mountPath: "/nexus-data"
            name: nexus-data
        resources:
          requests:
            memory: "2Gi"
            cpu: "500m"
          limits:
            memory: "4Gi"
            cpu: "1000m"
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-pv-claim
