k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: pthyon-app-deployment
  name: pthyon-app-deployment
  namespace: dev
spec:
  replicas: 3
  selector:
    matchLabels:
      app: pthyon-app
  template:
    metadata:
      labels:
        app: pthyon-app
    spec:
      containers:
      - image: gcr.io/seraphic-lock-358517/python-app:alpine
        name: python-app 
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: pthyon-app-service
  namespace: dev
spec:
  ports:
  - port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: pthyon-app
  type: NodePort
---
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    app: redis
  namespace: dev
spec:
  containers:
  - name: redis
    image: gcr.io/seraphic-lock-358517/redis:latest
    ports:
      - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
