k8s/redis.yaml
apiVersion: v1
kind: Pod
metadata:
  name: redis-pod
  labels:
    app: redis
  namespace: dev
spec:
  containers:
  - name: redis
    image: gcr.io/seraphic-lock-358517/redis:latest
    ports:
      - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
  namespace: dev
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
  selector:
    app: redis
---
