k8s/svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus-svc
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    app: nexus
  type: NodePort
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: jenkins
  name: jenkins-svc
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
    name: "http"
  - port: 50000
    targetPort: 50000
    name: "jnlp"
    protocol: "TCP"
  selector:
    app: jenkins
  type: NodePort
